# neon-localhost

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci-comment.yml  ci.yml  release.yml
scripts/: create-updater-json.mjs  release.mjs
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  model.rs  neon.rs  postgres.rs  proxy.rs
